--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,8 +1,11 @@
-<h1>Grat Stories</h1>
-<% @stories.each do |story| %>
-  <h3><%= story.title %></h3>
-  <p><%= story.description %></p>
-  <h5><%= link_to "Edit Post", edit_story_path(story)%></h5>
-  <h5><%= link_to 'Delete Post', story, method: :delete %></h5>
 
-<% end %>
+<button id="marker">Marker</button>  
+<div id="map-canvas"></div>
+<%# @stories.each do |story| %>
+  <h3><%# story.title %></h3>
+  <p><%#story.description %></p>
+  <h5><%# link_to "Edit Post", edit_story_path(story)%></h5>
+  <h5><%# link_to 'Delete Post', story, method: :delete %></h5>
+
+<%# end %>
+
