--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>GratBlog</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Gratitude</title>
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<header>
   <div class="left-nav">
-    <ul>
-      <li><%= link_to "GratGrows", stories_path %></li>
-    </ul>
+     
+       <%= link_to "Gratitude", root_path %>
   </div>
+
+
+
   <div class="right-nav">
     <ul class="nav navbar-nav">
-      <li><%= link_to "Add Story", new_story_path %></li>
+      <!-- <li><%#= link_to "Add Story", new_story_path %></li> -->
       <li><%= link_to "Map", stories_path %></li>
-      <li><%= link_to "Sign In", new_story_path %></li>
-      <li><%= link_to "Contact us", new_story_path %></li>
+
+      <!-- <li><%#= link_to "Sign In", new_story_path %></li> -->
+      <li><%= link_to "About Us", new_story_path %></li>
     </ul>
-  </div>
-  <div class="clearfix"></div>
-</header>
-<%= yield %>
-<div id="user_nav">
+    <ul class="nav navbar-nav">
+    <div id="user_nav">
   <% if current_user %>
     Signed in as <strong><%= current_user.name %></strong>!
     <%= link_to "Sign out", signout_path, id: "sign_out" %>
@@ -34,6 +59,12 @@
     <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
   <% end %>
 </div>
+</ul>
+  </div>
+  <div class="clearfix"></div>
+
+<%= yield %>
+ 
 </div>
 </body>
 </html>
