changed about us

--- a/app/views/sites/home.html.erb
+++ b/app/views/sites/home.html.erb
@@ -68,7 +68,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Gratitude</h1>
-        <p>The world isn't always a bad place! Good deeds are performed everyday. Share good deeds you've experienced. Go to the map, click on the marker button and then click on the location where you experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
+        <p>The world isn't always a bad place! Good deeds are performed everyday, often without fanfare. It's time we let others know of these acts of kindness. Share good deeds you've experienced with the world. Go to the map, click on the marker button and then click on the location where you experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
         <p>Feeling down? Click on a marker and read other people's good deed stories. Use their stories for ideas of good deeds you can go out and perform for others.</p>
         <p>Let's spread the love!</p>
       
