--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,2 +1,2 @@
 
-<p>hksdygibu, jsbvkjht</p>
+<p>This is a final project for General Assembly's Web Development Intensive program. In 12 short weeks I've been taken on an incredible learning journey and been shown how to continue this exciting journey on my own. I'm not sure where it will take me, but I'm enjoying each step of the way. </p>
