styled front page

--- a/app/views/sites/home.html.erb
+++ b/app/views/sites/home.html.erb
@@ -22,7 +22,9 @@
       background-color: #C8F7C5;
     }
 
-    .nav {
+    .nav_user {
+      top: 15px;
+      position: relative;
 
     }
     </style>
@@ -68,7 +70,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Gratitude</h1>
-        <p>The world isn't always a bad place! Good deeds are performed everyday, often without fanfare. It's time we let others know of these acts of kindness. Share good deeds you've experienced with the world. Go to the map, click on the marker button and then click on the location where you experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
+        <p>The world isn't always a bad place! Good deeds are performed everyday, often without fanfare. It's time we let others know of these acts of kindness. Share good deeds you've experienced with the world. Go to the map, sign in, click on the marker button and then click on the location where you experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
         <p>Feeling down? Click on a marker and read other people's good deed stories. Use their stories for ideas of good deeds you can go out and perform for others.</p>
         <p>Let's spread the love!</p>
       
@@ -77,13 +79,13 @@
     <div class="container" id="bottomContainer" >
   <div class="row">
     <div class="stepOne col-md-4 text-center">
-      <%= image_tag "signup.jpg", id: "tutorial", class: "img-circle", style: "height:250px; width:250px" %>
+      <%= image_tag "man-manimages.jpeg", id: "", class: "img-circle", style: "height:250px; width:250px" %>
     </div>
     <div class="stepTwo col-md-4 text-center">
-      <%= image_tag "report.jpg", id: "tutorial", class: "img-circle", style: "height:250px; width:250px" %>
+      <%= image_tag "tie-shoes0094.jpg", id: "", class: "img-circle", style: "height:250px; width:250px" %>
     </div>
     <div class="stepThree col-md-4 text-center">    
-      <%= image_tag "map.jpg", id: "tutorial", class: "img-circle", style: "height:250px; width:250px" %>
+      <%= image_tag "good-deeds.jpg", id: "", class: "img-circle", style: "height:250px; width:250px" %>
     </div>
   </div> <!-- row close -->
 </div> <!-- container close -->
