--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,6 +1,6 @@
-
+<%if current_user%>
 <button id="marker">Marker</button> 
-
+<%end%>
 <div id="map-canvas"></div>
 <%# @stories.each do |story| %>
   <h3><%# story.title %></h3>
