--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
 
 
 
@@ -33,6 +32,18 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+ <style>
+    .jumbotron{
+      background-color: #C8F7C5;
+    }
+
+    #nav_user {
+      top: 15px;
+      position: relative;
+
+    }
+    </style>
 </head>
 <body>
   <div class="left-nav">
@@ -51,7 +62,7 @@
       <li><%= link_to "About Us", new_story_path %></li>
     </ul>
     <ul class="nav navbar-nav">
-    <div id="user_nav">
+    <div id="user_nav" style="top: 15px;position: relative;">
   <% if current_user %>
     Signed in as <strong><%= current_user.name %></strong>!
     <%= link_to "Sign out", signout_path, id: "sign_out" %>
