changed gitignore file to include env file

--- a/app/views/sites/home.html.erb
+++ b/app/views/sites/home.html.erb
@@ -70,10 +70,9 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Gratitude</h1>
-        <p>The world isn't always a bad place! Good deeds are performed everyday, often without fanfare. It's time we let others know of these acts of kindness. Share good deeds you've experienced with the world. Go to the map, sign in, click on the marker button and then click on the location where you experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
-        <p>Feeling down? Click on a marker and read other people's good deed stories. Use their stories for ideas of good deeds you can go out and perform for others.</p>
-        <p>Let's spread the love!</p>
-      
+        <p>The world isn't always a bad place! Good deeds are performed everyday, often without fanfare. It's time we let others know of these acts of kindness. Share good deeds you've seen or experienced, with the world. Go to the map page, sign in with Facebook and a marker-button will appear in the upper left side, click on the marker-button and then place a new marker on the map by clicking on the location where you witnessed or experienced a good deed. If you click on your new marker, a window will appear for you to write your story. You can then allow it to post onto your Facebook page.</p>
+        <p>Feeling down? Click on a marker and read other people's good deed stories, without even signing in. Use their stories for ideas of good deeds you can go out and perform for others or just enjoy reading them.</p>
+        <p>Let's make the world a little better!</p>
       </div>
     </div>
     <div class="container" id="bottomContainer" >
