--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,2 +1,6 @@
 
-<h3>This is my final project for General Assembly's Web Development Intensive program. In 12 short weeks I've been taken on an incredible learning journey and been shown how to continue this exciting path on my own. I'm not sure where it will take me, but I'm enjoying each step of the way and can't wait to see just how far I can go!</h3>
+<h3>This is my final project for General Assembly's Web Development Intensive program. In 12 short weeks I've been taken on an incredible learning journey and been taught how to continue this exciting path on my own. I'm not sure where it will take me, but I'm enjoying each step of the way and can't wait to see just how far I can go!</h3>
+
+<h3>My goal has always been to create programs that ultimately help people. My hope is that you will add your own markers and spread it to others you know. Let's fill the world with good deeds!</h3>
+
+<h3>As a recent graduate of General Assembly, I'm currently looking for employment as a web developer. Feel free to find me through my LinkedIn</h3>
